# prog

./: .gitignore  .goreleaser.yaml  .rustfmt.toml  Cargo.toml  README.md  build.rs
.git_hooks/: pre-commit
.github/: ci.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
.husky/: pre-commit
.trae/rules/: project_rules.md
docs/: future-features.md  quick-start.md
migrations/2024-10-16-134618_create_records/: down.sql  up.sql
src/: cli.rs  configuration.rs  constants.rs  macros.rs  main.rs  schema.rs
src/commands/: add.rs  ai.rs  cdtmp.rs  check.rs  clean.rs  clone.rs  constants.rs  find.rs  import.rs  init.rs  list.rs  mod.rs  query.rs  remove.rs  reset.rs  size.rs  sync.rs  tmp.rs
src/commands/printer/: error.rs
src/context/: configuration.rs  context.rs  core.rs  mod.rs
src/context/database/: core.rs  database.rs  index_records.rs  migrations.rs  mod.rs  models.rs
src/context/database/sql_migrations/: 1_up_create_record.sql  202409211652_create_record.sql  2_up_update_primary_key.sql
src/context/path/: mod.rs
src/context/storage/: migrations.rs  mod.rs  storage.rs
src/context/storage/sql_migrations/: 202409211652_create_record.sql
src/helpers/: colors.rs  mod.rs  path.rs  rand.rs  shell.rs  template.rs  time.rs
src/helpers/git/: branch.rs  clone.rs  mod.rs  status.rs  url.rs
src/helpers/platform/: clipboard.rs
src/internal/: sync.rs
src/shell-integrations/: bash.sh  powershell.ps1  zsh  zsh.sh
src/storage/: mod.rs
