[package]
name = "prog"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
anyhow = "1.0.70"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
log = "0.4.29"
env_logger = "0.11.5"
inquire = "0.9.1"
toml = "0.9.8"
random-string = "1.1.0"
rayon = "1.11.0"
ignore = "0.4.25"
strsim = "0.11.1"

[dev-dependencies]
tempfile = "3.24"
