[package]
name = "prog"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.6.2"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
log = "0.4.29"
env_logger = "0.11.6"
inquire = "0.9.4"
toml = "1.1.2"
random-string = "1.1.0"
rayon = "1.11.0"
ignore = "0.4.25"
strsim = "0.11.1"

[dev-dependencies]
tempfile = "3.27"
